tests/NormalTests/paczka1/small_fuzzy/85761730.err
Error in line 4: DQ7Va1GWn A194 72,5
Error in line 6: e7kmkFc7fI S664 68,63
Error in line 2: DVlgq8 A456 68,5
Error in line 1: e7kmkFc7fI A456 39,3
Error in line 5: DQ7Va1GWn A161 43,9
